@@ -96,3 +96,4 @@ For 0.3:
 * Paul Kishimoto <mail@paul.kishimoto.name>
 * Wolter Hellmund <wolterh6@gmail.com>
 * huxuan <i@huxuan.org>
+* Marta Maria Casetti <mmcasetti@gmail.com>
